--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
     </div>
 
     <!-- MAIN CONTENT -->
+    <!-- zone 120x600-->
+    <script type="text/javascript" src="http://e.anthill.vn/delivery-ants/zone/512034101.js"></script>
+    <!-- zone 120x600-->
+    
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
